--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -55,6 +55,7 @@
                                                                          android:fontFamily="@font/font_regular"
                                                                          android:background="@drawable/login_text_back"
                                                                          android:text="@={viewmodel.phone}"
+
                                                                          android:textColor="@color/colorPrimary"
                                                                          android:textColorHint="@color/colorPrimary"
                                                                          android:hint="@string/EnterPhone"
@@ -64,7 +65,8 @@
                                                                          android:padding="10dp"
                                                                          android:id="@+id/userName"
                                                                          android:layout_margin="15dp"
-                                                                         android:inputType="phone"/>
+                                                                         android:inputType="number"
+                                                                         android:layoutDirection="locale"/>
 
 
                 <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
@@ -80,7 +82,7 @@
                                                                          android:padding="10dp"
                                                                          android:id="@+id/Password"
                                                                          android:layout_margin="15dp"
-                                                                         android:inputType="textPassword"/>
+                                                                         android:inputType="text"/>
 
 
                 <Button android:layout_width="match_parent" android:layout_height="wrap_content"
