--- a/app/src/main/res/layout/profile_fragment_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment_fragment.xml
@@ -20,119 +20,134 @@
 
 
     <ScrollView android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:visibility="visible"
-    android:id="@+id/profileContainer">
+                android:id="@+id/profileContainer">
 
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:orientation="vertical">
-        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
-                      android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
-                      android:translationZ="1dp"
-                      android:background="@drawable/rounded_profile" android:padding="10dp">
-            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                       android:src="@drawable/ic_person_black_44dp"
-                       android:padding="7dp"/>
-        </LinearLayout>
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
-                  android:orientation="vertical" android:layout_marginLeft="15dp"
-                  android:layout_marginRight="15dp"
-                 android:layout_marginTop="-20dp"
-                  android:background="@color/white" android:gravity="center_horizontal"
-                  android:paddingLeft="5dp" android:paddingRight="5dp">
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layoutDirection="ltr"
-                      android:layout_marginTop="50dp" android:gravity="right">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:orientation="vertical">
+            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
+                          android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
+                          android:translationZ="1dp"
+                          android:background="@drawable/rounded_profile" android:padding="10dp">
+                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                           android:src="@drawable/ic_person_black_44dp"
+                           android:padding="7dp"/>
+            </LinearLayout>
+            <LinearLayout android:layout_width="match_parent" android:layout_height="582dp"
+                          android:orientation="vertical" android:layout_marginLeft="15dp"
+                          android:layout_marginRight="15dp"
+                          android:layout_marginTop="-20dp"
+                          android:background="@color/white" android:gravity="center_horizontal"
+                          android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_weight="1">
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layoutDirection="ltr"
+                              android:layout_marginTop="50dp" android:gravity="right">
 
-            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
-                      android:id="@+id/nameUser" android:textSize="20sp"
-                      android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
-                      android:layout_marginRight="10dp" android:text="userName"
-                      android:fontFamily="@font/font_regular"/>
-            <LinearLayout android:background="@drawable/rounded_profile_frag"
-                          android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
-            >
-                <ImageView android:layout_width="35dp" android:layout_height="35dp"
-                           android:src="@drawable/ic_person_black_24dp_dark" android:scaleType="centerCrop"
-                           android:layout_gravity="center"/>
+                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
+                              android:id="@+id/nameUser" android:textSize="20sp"
+                              android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
+                              android:layout_marginRight="10dp" android:text="userName"
+                              android:fontFamily="@font/font_regular"/>
+                    <LinearLayout android:background="@drawable/rounded_profile_frag"
+                                  android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
+                    >
+                        <ImageView android:layout_width="35dp" android:layout_height="35dp"
+                                   android:src="@drawable/ic_person_black_24dp_dark" android:scaleType="centerCrop"
+                                   android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layoutDirection="ltr"
+                              android:layout_marginTop="10dp" android:gravity="right">
+
+                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
+                              android:id="@+id/phoneUser"
+                              android:textSize="20sp" android:text="phone number"
+                              android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
+                              android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
+                    <LinearLayout android:background="@drawable/rounded_profile_frag"
+                                  android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
+                    >
+                        <ImageView android:layout_width="35dp" android:layout_height="35dp"
+                                   android:src="@drawable/ic_call_black_24dp_dark" android:scaleType="centerCrop"
+                                   android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layoutDirection="ltr"
+                              android:layout_marginTop="10dp" android:gravity="right">
+
+                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
+                              android:id="@+id/secondPhone"
+                              android:textSize="20sp" android:text="phone number"
+                              android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
+                              android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
+                    <LinearLayout android:background="@drawable/rounded_profile_frag"
+                                  android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
+                    >
+                        <ImageView android:layout_width="35dp" android:layout_height="35dp"
+                                   android:src="@drawable/ic_call_black_24dp_dark" android:scaleType="centerCrop"
+                                   android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_marginTop="10dp"
+                              android:layoutDirection="ltr"
+                              android:gravity="right">
+
+                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
+                              android:id="@+id/emailUser"
+                              android:textSize="20sp" android:text="mustafayusef@gmail.com"
+                              android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
+                              android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
+                    <LinearLayout android:background="@drawable/rounded_profile_frag"
+                                  android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
+                    >
+                        <ImageView android:layout_width="35dp" android:layout_height="35dp"
+                                   android:src="@drawable/ic_email_black_24dp" android:scaleType="centerCrop"
+                                   android:layout_gravity="center"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                        android:text="@string/Favorite"
+                        android:layout_width="225dp"
+                        android:textColorHint="@color/white"
+                        android:textColor="@color/white"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/favBtn"
+                        android:layout_marginTop="30dp"
+                        android:background="@drawable/btn"
+                        android:padding="10dp"
+                        android:textSize="20sp"
+                        android:fontFamily="@font/font_bold"/>
+
+                <androidx.appcompat.widget.AppCompatButton android:layout_width="225dp"
+                                                           android:layout_height="wrap_content"
+                                                           android:textColor="@color/white"
+                                                           android:padding="10dp"
+                                                           android:gravity="center"
+                                                           android:fontFamily="@font/font_bold"
+                                                           android:textSize="20sp"
+                                                           android:id="@+id/myAdBtn"
+                                                           android:layout_marginTop="20dp"
+                                                           android:background="@drawable/btn"
+                                                           android:textColorHint="@color/white"
+                                                           android:text="@string/MyAds"/>
+
 
             </LinearLayout>
+
         </LinearLayout>
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layoutDirection="ltr"
-                      android:layout_marginTop="10dp" android:gravity="right">
-
-            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
-                      android:id="@+id/phoneUser"
-                      android:textSize="20sp" android:text="phone number"
-                      android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
-                      android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
-            <LinearLayout android:background="@drawable/rounded_profile_frag"
-                          android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
-            >
-                <ImageView android:layout_width="35dp" android:layout_height="35dp"
-                           android:src="@drawable/ic_call_black_24dp_dark" android:scaleType="centerCrop"
-                           android:layout_gravity="center"/>
-
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layoutDirection="ltr"
-                      android:layout_marginTop="10dp" android:gravity="right">
-
-            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
-                      android:id="@+id/secondPhone"
-                      android:textSize="20sp" android:text="phone number"
-                      android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
-                      android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
-            <LinearLayout android:background="@drawable/rounded_profile_frag"
-                          android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
-            >
-                <ImageView android:layout_width="35dp" android:layout_height="35dp"
-                           android:src="@drawable/ic_call_black_24dp_dark" android:scaleType="centerCrop"
-                           android:layout_gravity="center"/>
-
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_marginTop="10dp"
-                      android:layoutDirection="ltr"
-                      android:gravity="right">
-
-            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
-                      android:id="@+id/emailUser"
-                      android:textSize="20sp" android:text="mustafayusef@gmail.com"
-                      android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
-                      android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
-            <LinearLayout android:background="@drawable/rounded_profile_frag"
-                          android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
-            >
-                <ImageView android:layout_width="35dp" android:layout_height="35dp"
-                           android:src="@drawable/ic_email_black_24dp" android:scaleType="centerCrop"
-                           android:layout_gravity="center"/>
-
-            </LinearLayout>
-        </LinearLayout>
-        <Button
-                android:text="@string/Favorite"
-                android:layout_width="225dp"
-                android:layout_height="wrap_content" android:id="@+id/favBtn" android:layout_marginTop="30dp"
-                app:cornerRadius="50dp" android:padding="10dp" android:textSize="20sp"
-                android:fontFamily="@font/font_bold"/>
-        <Button
-                android:text="@string/MyAds"
-                android:layout_width="225dp"
-                android:layout_height="wrap_content" android:id="@+id/myAdBtn" android:layout_marginTop="20dp"
-                app:cornerRadius="50dp" android:padding="10dp" android:textSize="20sp"
-                android:fontFamily="@font/font_bold"/>
-    </LinearLayout>
-
-</LinearLayout>
     </ScrollView>
     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:src="@drawable/ic_exit_to_app_black_24dp"
