--- a/app/src/main/res/layout/sign_up_user_fragment.xml
+++ b/app/src/main/res/layout/sign_up_user_fragment.xml
@@ -65,11 +65,13 @@
                                                                      android:textColor="@color/colorPrimary"
                                                                      android:textColorHint="@color/colorPrimary"
                                                                      android:hint="@string/password"
+                                                                     android:id="@+id/passText"
                                                                      android:textSize="18sp"
-                                                                     android:padding="10dp"
 
+                                                                     android:padding="10dp"
+                                                                     android:inputType="text"
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="textPassword"/>
+                                                                     />
 
 
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
@@ -86,7 +88,7 @@
                                                                      android:padding="10dp"
 
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="phone"/>
+                                                                     android:inputType="number"/>
 
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
@@ -102,7 +104,7 @@
                                                                      android:padding="10dp"
 
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="phone"/>
+                                                                     android:inputType="number"/>
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
                                                                      android:layout_gravity="center"
