--- a/app/src/main/res/layout/car_card.xml
+++ b/app/src/main/res/layout/car_card.xml
@@ -50,6 +50,7 @@
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
+                          android:id="@+id/con"
                           android:gravity="right|center_vertical">
 
                 <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
