--- a/app/src/main/res/layout/profile_fragment_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment_fragment.xml
@@ -49,7 +49,7 @@
                     <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                               android:id="@+id/nameUser" android:textSize="20sp"
                               android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
-                              android:layout_marginRight="10dp" android:text="userName"
+                              android:layout_marginRight="10dp"
                               android:fontFamily="@font/font_regular"/>
                     <LinearLayout android:background="@drawable/rounded_profile_frag"
                                   android:layout_width="50dp" android:layout_height="50dp" android:gravity="center"
@@ -67,7 +67,7 @@
 
                     <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                               android:id="@+id/phoneUser"
-                              android:textSize="20sp" android:text="phone number"
+                              android:textSize="20sp"
                               android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
                               android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
                     <LinearLayout android:background="@drawable/rounded_profile_frag"
@@ -86,7 +86,7 @@
 
                     <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                               android:id="@+id/secondPhone"
-                              android:textSize="20sp" android:text="phone number"
+                              android:textSize="20sp"
                               android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
                               android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
                     <LinearLayout android:background="@drawable/rounded_profile_frag"
@@ -106,7 +106,7 @@
 
                     <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                               android:id="@+id/emailUser"
-                              android:textSize="20sp" android:text="mustafayusef@gmail.com"
+                              android:textSize="20sp"
                               android:textColor="#000" android:textAlignment="gravity" android:gravity="center"
                               android:layout_marginRight="10dp" android:fontFamily="@font/font_regular"/>
                     <LinearLayout android:background="@drawable/rounded_profile_frag"
