--- a/app/src/main/res/layout/show_result_fragment.xml
+++ b/app/src/main/res/layout/show_result_fragment.xml
@@ -12,7 +12,7 @@
 
     </androidx.recyclerview.widget.RecyclerView>
     <LinearLayout android:layout_width="wrap_content"
-                  android:visibility="visible"
+                  android:visibility="gone"
                   android:layout_height="wrap_content"
                   android:id="@+id/noNetContainerFilter"
                   android:orientation="vertical"
