--- a/app/src/main/res/layout/sign_up_user_fragment.xml
+++ b/app/src/main/res/layout/sign_up_user_fragment.xml
@@ -52,7 +52,7 @@
 
                                                                      android:paddingBottom="5dp"
                                                                      android:padding="10dp"
-
+                                                                     android:textAlignment="center"
                                                                      android:layout_margin="15dp"
                                                                      android:inputType="textEmailAddress"/>
 
@@ -67,9 +67,14 @@
                                                                      android:hint="@string/password"
                                                                      android:id="@+id/passText"
                                                                      android:textSize="18sp"
+                                                                     android:layoutDirection="locale"
+                                                                     android:textDirection="locale"
+                                                                     android:textAlignment="center"
+
+
 
                                                                      android:padding="10dp"
-                                                                     android:inputType="text"
+                                                                     android:inputType="textPassword"
                                                                      android:layout_margin="15dp"
                                                                      />
 
@@ -83,12 +88,12 @@
                                                                      android:textColorHint="@color/colorPrimary"
                                                                      android:hint="@string/EnterPhone"
                                                                      android:textSize="18sp"
-
+                                                                     android:textAlignment="center"
                                                                      android:paddingBottom="5dp"
                                                                      android:padding="10dp"
 
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="number"/>
+                                                                     android:inputType="phone"/>
 
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
@@ -99,12 +104,12 @@
                                                                      android:textColorHint="@color/colorPrimary"
                                                                      android:hint="@string/EnterSecondPhone"
                                                                      android:textSize="18sp"
-
+                                                                     android:textAlignment="center"
                                                                      android:paddingBottom="5dp"
                                                                      android:padding="10dp"
 
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="number"/>
+                                                                     android:inputType="phone"/>
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
                                                                      android:layout_gravity="center"
@@ -115,7 +120,7 @@
                                                                      android:hint="@string/EnterFullName"
                                                                      android:textSize="18sp"
                                                                      android:padding="10dp"
-
+                                                                     android:textAlignment="center"
                                                                      android:layout_margin="15dp"
                                                                      android:inputType="text"/>
 
