--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -11,22 +11,22 @@
                 android:id="@+id/storeSlider"
                 android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                app:sliderAnimationDuration="600"
+                android:layout_height="165dp"
+                app:sliderAnimationDuration="300"
                 android:cropToPadding="true"
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
-                app:sliderCircularHandlerEnabled="true"
-                app:sliderIndicatorAnimationDuration="600"
+                app:sliderCircularHandlerEnabled="false"
+                app:sliderIndicatorAnimationDuration="300"
                 app:sliderIndicatorGravity="center_horizontal|bottom"
-                app:sliderIndicatorMargin="15dp"
+                app:sliderIndicatorMargin="10dp"
                 app:sliderIndicatorOrientation="horizontal"
                 app:sliderIndicatorPadding="3dp"
                 app:sliderIndicatorRadius="2dp"
                 app:sliderIndicatorSelectedColor="#5A5A5A"
                 app:sliderIndicatorUnselectedColor="#FFF"
                 app:sliderScrollTimeInSec="1"
-                app:sliderStartAutoCycle="true"/>
+                app:sliderStartAutoCycle="false"/>
         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:textColor="@color/colorPrimary"
                   android:fontFamily="@font/font_bold"
