--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,12 @@
                      android:background="#00FFFFFF" android:layout_gravity="left"
                      android:layout_marginRight="10dp" android:id="@+id/filterBtn" android:padding="5dp"/>
 
-        <ImageView android:layout_width="80dp"
+        <ImageView android:layout_width="70dp"
                    android:layout_height="match_parent"
 
                    android:layout_gravity="center"
                    android:src="@drawable/icon"
-                   android:scaleType="fitXY"/>
+                   android:scaleType="centerCrop"/>
 
 
     </androidx.appcompat.widget.Toolbar>
