--- a/app/src/main/res/layout/car_card_favorite.xml
+++ b/app/src/main/res/layout/car_card_favorite.xml
@@ -7,7 +7,7 @@
               android:layout_height="wrap_content">
     <FrameLayout android:layout_width="match_parent" android:layout_height="221dp">
         <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
-                   android:scaleType="fitXY" android:id="@+id/carImage"
+                   android:scaleType="centerCrop" android:id="@+id/carImage"
 
                    android:cropToPadding="true"/>
         <LinearLayout android:layout_width="wrap_content" android:layout_marginTop="50dp"
