--- a/app/src/main/res/layout/public_fragment.xml
+++ b/app/src/main/res/layout/public_fragment.xml
@@ -73,6 +73,21 @@
         />
     </LinearLayout>
 
+    <LinearLayout android:layout_width="wrap_content"
+                  android:visibility="gone"
+                  android:layout_height="wrap_content"
+                  android:id="@+id/noResultSections"
+                  android:orientation="vertical"
+                  android:layout_gravity="center" android:gravity="center">
+        <ImageView android:layout_width="100dp" android:layout_height="100dp"
+                   android:src="@drawable/no_404"/>
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/noResult"
+                  android:layout_margin="10dp" android:textSize="18sp" android:fontFamily="@font/font_regular"/>
+
+    </LinearLayout>
+
+
 
     <com.airbnb.lottie.LottieAnimationView
             android:inputType="textEmailAddress|textNoSuggestions"
