--- a/app/src/main/res/layout/sign_up_user_fragment.xml
+++ b/app/src/main/res/layout/sign_up_user_fragment.xml
@@ -43,24 +43,24 @@
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
                                                                      android:layout_gravity="center"
+                                                                     android:text="@={viewmodel.name}"
                                                                      android:background="@drawable/login_text_back"
-                                                                     android:text="@={viewmodel.email}"
                                                                      android:textColor="@color/colorPrimary"
                                                                      android:textColorHint="@color/colorPrimary"
-                                                                     android:hint="@string/EnterEmail"
+                                                                     android:hint="@string/EnterFullName"
                                                                      android:textSize="18sp"
-
-                                                                     android:paddingBottom="5dp"
+                                                                     android:fontFamily="@font/font_regular"
                                                                      android:padding="10dp"
                                                                      android:textAlignment="center"
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="textEmailAddress"/>
+                                                                     android:inputType="text"/>
 
 
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
                                                                      android:layout_gravity="center"
                                                                      android:text="@={viewmodel.password}"
+
                                                                      android:background="@drawable/login_text_back"
                                                                      android:textColor="@color/colorPrimary"
                                                                      android:textColorHint="@color/colorPrimary"
@@ -71,7 +71,7 @@
                                                                      android:textDirection="locale"
                                                                      android:textAlignment="center"
 
-
+                                                                     android:fontFamily="@font/font_regular"
 
                                                                      android:padding="10dp"
                                                                      android:inputType="textPassword"
@@ -91,7 +91,7 @@
                                                                      android:textAlignment="center"
                                                                      android:paddingBottom="5dp"
                                                                      android:padding="10dp"
-
+                                                                     android:fontFamily="@font/font_regular"
                                                                      android:layout_margin="15dp"
                                                                      android:inputType="phone"/>
 
@@ -105,25 +105,28 @@
                                                                      android:hint="@string/EnterSecondPhone"
                                                                      android:textSize="18sp"
                                                                      android:textAlignment="center"
+                                                                     android:fontFamily="@font/font_regular"
                                                                      android:paddingBottom="5dp"
                                                                      android:padding="10dp"
 
                                                                      android:layout_margin="15dp"
                                                                      android:inputType="phone"/>
+
             <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                      android:layout_height="60dp"
                                                                      android:layout_gravity="center"
-                                                                     android:text="@={viewmodel.name}"
                                                                      android:background="@drawable/login_text_back"
+                                                                     android:text="@={viewmodel.email}"
                                                                      android:textColor="@color/colorPrimary"
                                                                      android:textColorHint="@color/colorPrimary"
-                                                                     android:hint="@string/EnterFullName"
+                                                                     android:hint="@string/EnterEmail"
                                                                      android:textSize="18sp"
+                                                                     android:fontFamily="@font/font_regular"
+                                                                     android:paddingBottom="5dp"
                                                                      android:padding="10dp"
                                                                      android:textAlignment="center"
                                                                      android:layout_margin="15dp"
-                                                                     android:inputType="text"/>
-
+                                                                     android:inputType="textEmailAddress"/>
             <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:text="@string/SignIn" android:fontFamily="@font/font_bold"
                     android:textColor="@color/white"
