--- a/app/src/main/res/layout/slider_layout.xml
+++ b/app/src/main/res/layout/slider_layout.xml
@@ -5,5 +5,6 @@
               android:layout_height="match_parent">
 
     <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
-               android:id="@+id/slid_Image" android:scaleType="fitXY"/>
+               android:id="@+id/slid_Image" android:scaleType="centerCrop"
+            android:cropToPadding="true"/>
 </LinearLayout>
