--- a/app/src/main/res/layout/store_card.xml
+++ b/app/src/main/res/layout/store_card.xml
@@ -93,6 +93,6 @@
                      android:padding="4dp"
 
                      android:layout_margin="5dp"
-                     android:background="@drawable/phone" android:id="@+id/callNumber"/>
+                     android:background="@drawable/phone" android:id="@+id/callNumberStore"/>
     </LinearLayout>
 </LinearLayout>
